--- a/conf/osquery/osquery.conf
+++ b/conf/osquery/osquery.conf
@@ -161,6 +161,10 @@
       "query": "SELECT name,pid FROM processes where name='suricata';",
       "interval": 60
     },
+    "check_filebeat": {
+      "query": "SELECT name,pid FROM processes where name='filebeat';",
+      "interval": 60
+    },
     "check_docker": {
       "query": "SELECT name,pid FROM processes where name='docker';",
       "interval": 60
