--- a/roles/suricata/setup_suricata.yml
+++ b/roles/suricata/setup_suricata.yml
@@ -8,7 +8,7 @@
 
 - name: Install deps
   apt:
-    name: ['libpcre3','libpcre3-dbg','libpcre3-dev','build-essential','libpcap-dev','libnet1-dev','libyaml-0-2','libyaml-dev','pkg-config','zlib1g','zlib1g-dev','libcap-ng-dev','libcap-ng0','make','libmagic-dev','libjansson-dev','libnss3-dev','libgeoip-dev','liblua5.1-dev','libhiredis-dev','libevent-dev','python-yaml','rustc','cargo','liblz4-dev']
+    name: ['libpcre3', 'libpcre3-dbg', 'libpcre3-dev', 'build-essential', 'libpcap-dev', 'libnet1-dev', 'libyaml-0-2', 'libyaml-dev', 'pkg-config', 'zlib1g', 'zlib1g-dev', 'libcap-ng-dev', 'libcap-ng0', 'make', 'libmagic-dev', 'libjansson-dev', 'libnss3-dev', 'libgeoip-dev', 'liblua5.1-dev', 'libhiredis-dev', 'libevent-dev', 'python-yaml', 'rustc', 'cargo', 'liblz4-dev']
     state: latest
 
 - name: Stat Suricata
@@ -255,3 +255,9 @@
     enabled: yes
     state: restarted
   when: not suricata_filebeat_module_status.stat.exists
+
+- name: Verify Suricata is running and logging
+  wait_for:
+    path: '/var/log/suricata/eve.json'
+    delay: 10
+  retries: 10
